--- a/emotion-wheel.html
+++ b/emotion-wheel.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A special topic page explaining the structure and content of the Feelings Wheel, a tool for emotional literacy.">
 
     <!-- Base stylesheet -->
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
     <link rel="canonical" href="https://spinwheelonline.org/emotion-wheel.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,9 +45,9 @@
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                <li class="nav-item"><a href="./about-us.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="./contact-us.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                <li class="nav-item"><a href="/about-us.html" class="nav-link">About</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -55,7 +55,7 @@
     <div class="main-content-wrapper" style="max-width: 1080px; padding: 0 15px;">
         <!-- Image Display -->
         <div class="image-container">
-            <img id="interactive-wheel-image" src="./static/img/Wheel-of-Emotions-Handout.webp" alt="The Feelings Wheel" style="max-width: 100%; height: auto; border-radius: 8px; cursor: grab; user-select: none;">
+            <img id="interactive-wheel-image" src="/static/img/Wheel-of-Emotions-Handout.webp" alt="The Feelings Wheel" style="max-width: 100%; height: auto; border-radius: 8px; cursor: grab; user-select: none;">
         </div>
 </div>
         <div class="manual-section-wrapper" style="margin-bottom:0;">
@@ -236,9 +236,9 @@
         </div>
 
     <footer>
-        <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-use.html">Terms of Use</a> | <a href="./user-guide.html">Help</a></p>
+        <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/user-guide.html">Help</a></p>
     </footer>
-<script src="./static/js/wheel.js"></script>
-    <script src="./static/js/image-interactivity.js"></script>
+<script src="/static/js/wheel.js"></script>
+    <script src="/static/js/image-interactivity.js"></script>
 </body>
 </html>
