--- a/letter-randomizer-wheel.html
+++ b/letter-randomizer-wheel.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Spin the wheel to get a random letter from A to Z. A great tool for games, education, and creative prompts.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://spinwheelonline.org/letter-randomizer-wheel.html"> 
-    <meta property="og:image" content="./static/img/namepickerwheel-1.png">
+    <meta property="og:image" content="/static/img/namepickerwheel-1.png">
     <meta property="og:image:alt" content="Letter Randomizer Wheel - Pick a Random Letter">
     <meta property="og:site_name" content="Spin The Wheel">
 
@@ -18,18 +18,18 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Letter Randomizer Wheel - Pick a Random Letter">
     <meta name="twitter:description" content="Spin the wheel to get a random letter from A to Z. A great tool for games, education, and creative prompts.">
-    <meta name="twitter:image" content="./static/img/namepickerwheel-1.png">
+    <meta name="twitter:image" content="/static/img/namepickerwheel-1.png">
 
     <link rel="canonical" href="https://spinwheelonline.org/letter-randomizer-wheel.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <nav class="navbar-industrial">
@@ -46,9 +46,9 @@
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="./about-us.html" class="nav-link">about</a></li>
-                <li class="nav-item"><a href="./contact-us.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">about</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">contact</a></li>
             </ul>
         </div>
     </nav>
@@ -80,7 +80,7 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                             </svg>
                         </button>
-                        <button class="icon-button" title="User Guide"><a href="./user-guide.html" style="color:#ccc" title="User Guide">
+                        <button class="icon-button" title="User Guide"><a href="/user-guide.html" style="color:#ccc" title="User Guide">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
                         </svg></a>
@@ -260,7 +260,7 @@
             <h3 id="introduction">1. Introduction</h3>
             <p>Welcome to the Letter Randomizer Wheel! This simple tool lets you pick a random letter from A to Z. It's perfect for party games like Pictionary, classroom activities, creative writing prompts, or any situation where you need a random letter.</p>
             <div class="placeholder-image">
-                <img src="./static/img/namepickerwheel-1.png" alt="The main interface of the Letter Randomizer Wheel">
+                <img src="/static/img/namepickerwheel-1.png" alt="The main interface of the Letter Randomizer Wheel">
                 <p>The Letter Randomizer Wheel interface</p>
             </div>
 
@@ -294,9 +294,9 @@
     </ul>
 </div>
 <footer>
-    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-use.html">Terms of Use</a> | <a href="./user-guide.html">Help</a></p>
+    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/user-guide.html">Help</a></p>
 </footer>
 
-<script src="./static/js/wheel.js"></script>
+<script src="/static/js/wheel.js"></script>
 </body>
 </html>
