--- a/what-to-do-wheel.html
+++ b/what-to-do-wheel.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Feeling bored? Can't decide what to do? Spin the 'What to Do Wheel' for a random suggestion of activities, tasks, or fun things to do.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://spinwheelonline.org/what-to-do-wheel.html"> 
-    <meta property="og:image" content="./static/img/namepickerwheel-1.png">
+    <meta property="og:image" content="/static/img/namepickerwheel-1.png">
     <meta property="og:image:alt" content="What to Do Wheel - Random Activity Generator">
     <meta property="og:site_name" content="Spin The Wheel">
 
@@ -18,18 +18,18 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="What to Do Wheel - Random Activity Generator">
     <meta name="twitter:description" content="Feeling bored? Can't decide what to do? Spin the 'What to Do Wheel' for a random suggestion of activities, tasks, or fun things to do.">
-    <meta name="twitter:image" content="./static/img/namepickerwheel-1.png">
+    <meta name="twitter:image" content="/static/img/namepickerwheel-1.png">
 
     <link rel="canonical" href="https://spinwheelonline.org/what-to-do-wheel.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <nav class="navbar-industrial">
@@ -46,9 +46,9 @@
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="./about-us.html" class="nav-link">about</a></li>
-                <li class="nav-item"><a href="./contact-us.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">about</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">contact</a></li>
             </ul>
         </div>
     </nav>
@@ -80,7 +80,7 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                             </svg>
                         </button>
-                        <button class="icon-button" title="User Guide"><a href="./user-guide.html" style="color:#ccc" title="User Guide">
+                        <button class="icon-button" title="User Guide"><a href="/user-guide.html" style="color:#ccc" title="User Guide">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
                         </svg></a>
@@ -260,7 +260,7 @@
             <h3 id="introduction">1. Introduction</h3>
             <p>Stuck in a rut? Can't decide what to do with your free time? The What to Do Wheel is your personal random activity generator! It's perfect for overcoming boredom, managing a list of chores, or finding a new hobby. Just spin the wheel and let a random suggestion kickstart your next activity.</p>
             <div class="placeholder-image">
-                <img src="./static/img/namepickerwheel-1.png" alt="The main interface of the What to Do Wheel">
+                <img src="/static/img/namepickerwheel-1.png" alt="The main interface of the What to Do Wheel">
                 <p>The What to Do Wheel interface</p>
             </div>
 
@@ -279,7 +279,7 @@
             </ol>
             <p>Use the <strong>📥 Import</strong> and <strong>📤 Export</strong> buttons to save and load different activity lists. You could have a "Productive Tasks" list and a "Fun & Relaxing" list to suit your mood.</p>
             <div class="placeholder-image">
-                <img src="./static/img/entries-5.png" alt="The entries tab is where you customize your activity list">
+                <img src="/static/img/entries-5.png" alt="The entries tab is where you customize your activity list">
                 <p>Add your own tasks, chores, or hobbies</p>
             </div>
 
@@ -292,7 +292,7 @@
                 <li><strong>(Optional) Elimination Mode:</strong> Once an activity is chosen, you can click "Delete Winner" in the pop-up. This is great for working through a to-do list, ensuring you don't get the same task twice.</li>
             </ol>
             <div class="placeholder-image">
-                <img src="./static/img/winner-modal-13.png" alt="The Winner Modal showing the chosen activity">
+                <img src="/static/img/winner-modal-13.png" alt="The Winner Modal showing the chosen activity">
                 <p>Let the wheel pick your next activity!</p>
             </div>
             
@@ -315,9 +315,9 @@
     </ul>
 </div>
 <footer>
-    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-use.html">Terms of Use</a> | <a href="./user-guide.html">Help</a></p>
+    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/user-guide.html">Help</a></p>
 </footer>
 
-<script src="./static/js/wheel.js"></script>
+<script src="/static/js/wheel.js"></script>
 </body>
 </html>
