--- a/what-to-eat-wheel.html
+++ b/what-to-eat-wheel.html
@@ -10,7 +10,7 @@
     <meta property="og:description" content="Can't decide what to eat? Let the What to Eat Wheel make a random choice for you. Perfect for breakfast, lunch, or dinner decisions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://spinwheelonline.org/what-to-eat-wheel.html"> 
-    <meta property="og:image" content="./static/img/namepickerwheel-1.png">
+    <meta property="og:image" content="/static/img/namepickerwheel-1.png">
     <meta property="og:image:alt" content="What to Eat Wheel - A Fun Food Decision Maker">
     <meta property="og:site_name" content="Spin The Wheel">
 
@@ -18,18 +18,18 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="What to Eat Wheel - A Fun Food Decision Maker">
     <meta name="twitter:description" content="Can't decide what to eat? Let the What to Eat Wheel make a random choice for you. Perfect for breakfast, lunch, or dinner decisions.">
-    <meta name="twitter:image" content="./static/img/namepickerwheel-1.png">
+    <meta name="twitter:image" content="/static/img/namepickerwheel-1.png">
 
     <link rel="canonical" href="https://spinwheelonline.org/what-to-eat-wheel.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./static/css/index.css">
+    <link rel="stylesheet" href="/static/css/index.css">
 
-    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-    <link rel="manifest" href="./site.webmanifest">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
     <nav class="navbar-industrial">
@@ -46,9 +46,9 @@
                 <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#trending-wheels" class="nav-link">tools</a></li>
                 <li class="nav-item"><a href="#faq-section" class="nav-link">FAQ</a></li>
-                <li class="nav-item"><a href="./user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
-                 <li class="nav-item"><a href="./about-us.html" class="nav-link">about</a></li>
-                <li class="nav-item"><a href="./contact-us.html" class="nav-link">contact</a></li>
+                <li class="nav-item"><a href="/user-guide.html" class="nav-link js-scroll-trigger">User Guide</a></li>
+                 <li class="nav-item"><a href="/about-us.html" class="nav-link">about</a></li>
+                <li class="nav-item"><a href="/contact-us.html" class="nav-link">contact</a></li>
             </ul>
         </div>
     </nav>
@@ -80,7 +80,7 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
                             </svg>
                         </button>
-                        <button class="icon-button" title="User Guide"><a href="./user-guide.html" style="color:#ccc" title="User Guide">
+                        <button class="icon-button" title="User Guide"><a href="/user-guide.html" style="color:#ccc" title="User Guide">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
                         </svg></a>
@@ -260,7 +260,7 @@
             <h3 id="introduction">1. Introduction</h3>
             <p>Tired of the daily "What should we eat?" debate? The What to Eat Wheel is here to save the day! This tool is designed to make your meal decisions quick, easy, and fun. Whether you're deciding on dinner for tonight, a place to go for lunch, or what kind of takeout to order, just spin the wheel and let fate decide.</p>
             <div class="placeholder-image">
-                <img src="./static/img/namepickerwheel-1.png" alt="The main interface of the What to Eat Wheel">
+                <img src="/static/img/namepickerwheel-1.png" alt="The main interface of the What to Eat Wheel">
                 <p>The What to Eat Wheel interface</p>
             </div>
 
@@ -279,7 +279,7 @@
             </ol>
             <p>Use the <strong>📥 Import</strong> and <strong>📤 Export</strong> buttons to save and load different lists. You could have a "Quick Lunch" list, a "Date Night Restaurants" list, or a "Healthy Choices" list!</p>
             <div class="placeholder-image">
-                <img src="./static/img/entries-5.png" alt="The entries tab is where you customize your food list">
+                <img src="/static/img/entries-5.png" alt="The entries tab is where you customize your food list">
                 <p>Add your own favorite foods and restaurants</p>
             </div>
 
@@ -292,7 +292,7 @@
                 <li><strong>(Optional) Remove the Winner:</strong> If you're planning meals for a week, you can click "Delete Winner" in the popup to remove that option from the list for the next spin.</li>
             </ol>
             <div class="placeholder-image">
-                <img src="./static/img/winner-modal-13.png" alt="The Winner Modal showing the chosen food">
+                <img src="/static/img/winner-modal-13.png" alt="The Winner Modal showing the chosen food">
                 <p>Let the wheel decide your next meal!</p>
             </div>
             
@@ -324,9 +324,9 @@
     </ul>
 </div>
 <footer>
-    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="./privacy-policy.html">Privacy Policy</a> | <a href="./terms-of-use.html">Terms of Use</a> | <a href="./user-guide.html">Help</a></p>
+    <p>© 2025 Spin The Wheel. All Rights Reserved. <a href="/privacy-policy.html">Privacy Policy</a> | <a href="/terms-of-use.html">Terms of Use</a> | <a href="/user-guide.html">Help</a></p>
 </footer>
 
-<script src="./static/js/wheel.js"></script>
+<script src="/static/js/wheel.js"></script>
 </body>
 </html>
